--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
         <p class="duplicate">Chance to get duplicate: <span class="value"></span></p>
     </div>
 </div>
+<script src="js/script.js"></script>
