--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <meta charset="utf-8">
 
 <!-- jQuery -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+<link rel="stylesheet" href="css/style.css">
+
 <div class="container">
     <h1>Marvel Heroes random hero box calculator</h1>
+	<div id="result">
+		<h3>Should you random?</h3>
+		<h2 id="suggestion">YES</h2>
+		<p class="duplicate">Chance to get duplicate:
+			<span class="value"></span>
+		</p>
+	</div>
+	<h3>Select heroes you already have in your roster:</h3>
     <div id="roster" class="row">
-    </div>
-    <button id="calculate">Calculate</button>
-    <div id="result">
-        <p class="duplicate">Chance to get duplicate: <span class="value"></span></p>
     </div>
 </div>
 <script src="js/script.js"></script>
