refactored calculator and typescript classes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 
 <div class="container">
     <h1>Marvel Heroes random hero box calculator</h1>
+	<h3>Should you random? Calculate your chances.</h3>
 	<div id="result">
-		<h3>Should you random?</h3>
-		<h2 id="suggestion">YES</h2>
+		<h2 id="suggestion">YES!</h2>
+			<!--
+				chance to get a new hero: 50%
+				chance to get a desired hero: 11%
+				
+				<h2 id="suggestion">NO</h2>
+					Go buy Deadpool or Emma instead!
+					
+			 -->
 		<p class="duplicate">Chance to get duplicate:
 			<span class="value"></span>
 		</p>
