--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 		</script>
     </div>
 	<div id="result" class="collapsed">
-		<p class="bg-success res-answer res-yes">YES! Go get a random box!</p>
+		<p class="bg-success res-answer res-yes">
+			YES! Go get a random box!
+		</p>
+		<p class="bg-info res-answer res-probably">
+			PROBABLY. You have a fair chance of winning a new hero.
+		</p>
+		<p class="bg-danger res-answer res-no">
+			NO. Odds are against you, just go and buy a new hero with splinters.
+		</p>
 			<!--
 				chance to get a desired hero: 11%
 				
@@ -35,10 +43,14 @@
 			Chance to get a duplicate hero token:
 			<span class="value"></span>
 		</p>
+		<p class="expected-return">
+			Expected return:
+			<span class="value"></span>
+		</p>
 	</div>
 	<div id="disclaimer">
 		<p>According to Random Hero Box description, all heroes have equal chances.</p>
-		<p>While the math here is believed to be 100% correct, there is always a lot of luck involved: you can get 3 duplicate tokens in a row with 99% chance of new, or get an only missing hero with 2% chance of rolling.</p>
+		<p>While the math here is believed to be 100% correct, there is always a lot of luck involved: you can get 3 duplicate tokens in a row with 99% chance of new, or get your only missing hero with 2% chance of rolling.</p>
 	</div>
 	<div id="footer">
 		<p class="text-muted">
