extra message for full roster

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<p class="bg-danger res-answer res-no">
 			NO. Odds are against you, just go and buy a new hero with splinters.
 		</p>
+		<p class="bg-success res-answer res-full">
+			Congratulations! You have all the heroes!
+		</p>
 			<!--
 				chance to get a desired hero: 11%
 				
